<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="1082dp"
        android:layout_height="895dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/cities_background" />

    <Button
        android:id="@+id/tashkent_button"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:layout_marginTop="252dp"
        android:backgroundTint="@color/steal_blue"
        android:text="@string/tashkent_button"
        android:textColor="@color/crimson"
        android:textColorLink="#9F8A8A"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ferghana_button"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/steal_blue"
        android:text="@string/ferghana_button"
        android:textColor="@color/crimson"
        android:textColorLink="#9F8A8A"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/termez_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tashkent_button" />


    <Button
        android:id="@+id/termez_button"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:layout_marginBottom="252dp"
        android:backgroundTint="@color/steal_blue"
        android:text="@string/termez_button"
        android:textColor="@color/crimson"
        android:textColorLink="#9F8A8A"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>